--- a/css/demo.css
+++ b/css/demo.css
@@ -2,11 +2,11 @@
 	font-weight: normal;
 	font-style: normal;
 	font-family: 'codropsicons';
-	src:url('../fonts/codropsicons/codropsicons.eot');
-	src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/codropsicons/codropsicons.woff') format('woff'),
-		url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),
-		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
+	/*src:url('../fonts/codropsicons/codropsicons.eot');*/
+	/*src:url('../fonts/codropsicons/codropsicons.eot?#iefix') format('embedded-opentype'),*/
+		/*url('../fonts/codropsicons/codropsicons.woff') format('woff'),*/
+		/*url('../fonts/codropsicons/codropsicons.ttf') format('truetype'),*/
+		/*url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');*/
 }
 
 *, *:after, *:before { -webkit-box-sizing: border-box; box-sizing: border-box; }
@@ -193,4 +193,64 @@ p.ref {
 	.codrops-header h1 {
 		font-size: 2.5em;
 	}
+}
+
+#section-navigation {
+	position:relative;
+	text-align: center;
+	padding-bottom: 50px;
+}
+
+.btn-white {
+	font-family:'Lato';
+	/*font-weight:999;*/
+	min-width:100px;
+	background:transparent;
+	outline:none;
+	border:3px solid #000;
+	border-radius:22px;
+	padding:10px;
+	margin-right:10px;
+	margin-top:10px;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-goback {
+	font-family:'Lato';
+	/*font-weight:999;*/
+	min-width:100px;
+	background:#eee;
+	color:#000;
+	outline:none;
+	border:none;
+	border-radius:22px;
+	padding:10px;
+	margin-right:10px;
+	margin-bottom:20px;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	-ms-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-goback:hover {
+	opacity:.8;
+}
+
+
+.btn-white:hover {
+	background:#000;
+	color:#fff;
+	outline:none;
+	border:1px solid #000;
+}
+
+.btn-active {
+	background:#000;
+	color:#fff;
 }
