--- a/index.css
+++ b/index.css
@@ -9,6 +9,15 @@ html,body{
     width: 100%;
 }
 
+.fl {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+
+}
 
 .abm{
     width: 100%;
